--- a/web/src/jsx/pages/texturizer/styles.module.css
+++ b/web/src/jsx/pages/texturizer/styles.module.css
@@ -7,7 +7,11 @@
 	width: 20em;
 }
 
-.texturizer-controls label {
+.texturizer-controls > label {
 	display: grid;
 	grid-template-columns: 1fr auto;
+}
+
+.texturizer-gradient {
+	width: 100%;
 }
